[gd_scene load_steps=8 format=2]

[ext_resource path="res://characters/rika/rika.tscn" type="PackedScene" id=1]
[ext_resource path="res://worlds/scenes/01-rika-appearance.gd" type="Script" id=3]

[sub_resource type="Curve2D" id=5]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 400, 0, 0, 0, 0, 0, 592, -192, 0, 0, 0, 0, 592, -704 )
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 300, 200 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 200, 200 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 200, 100 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 200, 200 )

[node name="RikaAppearance" type="Node2D"]
script = ExtResource( 3 )

[node name="Rika" parent="." instance=ExtResource( 1 )]

[node name="Path2D" type="Path2D" parent="."]
curve = SubResource( 5 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
loop = false

[node name="StartArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StartArea"]
shape = SubResource( 4 )

[node name="EndArea" type="Area2D" parent="."]
position = Vector2( 608, -552 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
shape = SubResource( 6 )

[node name="KnockPoint" type="Node2D" parent="."]
position = Vector2( 592, -424 )

[node name="PinchoPoint" type="Node2D" parent="."]
position = Vector2( 608, -1087 )

[node name="PostBoss" type="Node2D" parent="."]

[node name="Down" type="Area2D" parent="PostBoss"]
position = Vector2( 608, -600 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PostBoss/Down"]
position = Vector2( -16, 176 )
shape = SubResource( 7 )
disabled = true

[node name="Right" type="Area2D" parent="PostBoss"]
position = Vector2( 1128, -1088 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PostBoss/Right"]
shape = SubResource( 8 )
disabled = true
